src/objects/Case_Access_Request__c.object
<CustomObject>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Access Requests</relationshipLabel>
        <relationshipName>Case_Access_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual_First_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Individual First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Last_Name__c</fullName>
        <encrypted>true</encrypted>
        <label>Individual Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <encrypted>true</encrypted>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Access_Request__c</fullName>
        <encrypted>true</encrypted>
        <label>Reason for Access Request</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual_Other__c</fullName>
        <label>Relationship to Individual (Other)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Individual__c</fullName>
        <label>Relationship to Individual</label>
        <picklist>
            <picklistValues>
                <fullName>Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Foster Parent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trustee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLBC Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Case Access Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Case__c</columns>
        <columns>Case_Number__c</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Notes__c</columns>
        <columns>Reason_for_Access_Request__c</columns>
        <columns>Relationship_to_Individual__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Case Access Requests</label>
    </listViews>
    <listViews>
        <fullName>Pending_Case_Access_Requests</fullName>
        <columns>NAME</columns>
        <columns>Case_Number__c</columns>
        <columns>Individual_First_Name__c</columns>
        <columns>Individual_Last_Name__c</columns>
        <columns>Relationship_to_Individual__c</columns>
        <columns>Reason_for_Access_Request__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <label>Pending Case Access Requests</label>
        <queue>Pending_Case_Access_Requests</queue>
        <sharedTo>
            <group>All_Coordinators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Case Access Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Access Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>self_sharing__c</fullName>
        <label>self sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Relationship_Type_Other</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(Relationship_to_Individual_Other__c), ISPICKVAL(Relationship_to_Individual__c, &apos;Other&apos;))</errorConditionFormula>
        <errorDisplayField>Relationship_to_Individual_Other__c</errorDisplayField>
        <errorMessage>Please specify the relationship to individual</errorMessage>
    </validationRules>
</CustomObject>